[LFC] Fix ASSERT while running fast/block/block-parent-with-zero-width-child.html https://bugs.webkit.org/show_bug.cgi?id=204768

Reviewed by Antti Koivisto.

1. FormattingState::displayInlineContent() returns nullptr in case of empty inline content.
2. Typo in InlineItemRun::moveHorizontally

* layout/blockformatting/BlockMarginCollapse.cpp:
(WebCore::Layout::BlockFormattingContext::MarginCollapse::marginsCollapseThrough const):
* layout/inlineformatting/InlineLineBuilder.h:
(WebCore::Layout::LineBuilder::InlineItemRun::moveHorizontally):

Canonical link: https://commits.webkit.org/217981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253013 268f45cc-cd09-0410-ab3c-d52691b4dbfc